<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_stegnography"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steganography_is_the_practice_of_concealing_a_file_message_image_or_video_within_another_file_message_image_or_video"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnEncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode"
        android:layout_below="@id/tvDescription"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btnDecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decode"
        android:layout_below="@id/tvDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"/>

</RelativeLayout>